[package]
name = "devmem"
version = "0.1.1"
authors = ["Giacomo Vitali <gv@gvitali.eu>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/GVitali1412/devmem-rs"
description = "Small library for accessing the physical address space using /dev/mem"
readme = "README.md"
documentation = "https://docs.rs/devmem"

[dependencies]
libc = "0.2"
